crates/mlcg_builtin_macros/tests/ui/fail_empty_input_name.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/empty_input_name_manifest.toml");
}

fn main() {}
